[package]
name = "rtask"
version = "0.1.0"
edition = "2021"
authors = ["Wensheng Wang"]
description = "A simple YAML-based task runner written in Rust"
license = "MIT"
repository = "https://github.com/wensheng/rtask"
homepage = "https://github.com/wensheng/rtask"
readme = "README.md"
categories = ["command-line-utilities"]
exclude = [".github/*", "/tests/*"]
# documentation = "https://docs.rs/rtask"
keywords = ["cli", "utility", "task", "make"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# CLI
clap = { version = "4.5", features = ["derive", "cargo", "string"] }
clap_complete = "4.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Terminal colors
colored = "2.1"

# File system operations
directories = "5.0"
glob = "0.3"
globset = "0.4"

# Environment files
dotenvy = "0.15"

# Regular expressions for interpolation
regex = "1.11"

# Command execution
# (using std::process, no external dependency needed)

[dev-dependencies]
# Testing
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
